# deep-contact-estimator

./: .gitignore  CMakeLists.txt  README.md  contact_est_lcm.csv
config/: inference_one_seq_params.yaml  interface.yaml  mat2numpy_config.yaml  network_params.yaml  settings.yaml  test_params.yaml
data/: README.md  mat2npy.py  test_label_lcm.npy  test_lcm.npy
deep_learning_methods/data/: readme.txt
deep_learning_methods/source/: autoencoder.py  autoencoder_cnn.py  both_legs.py  dec.py  single_leg.py  win_data_cnn.py  win_data_resnet.py
deep_learning_methods/utils/: autoencoder_cnn_fun.py  autoencoder_fun.py  both_leg_fun.py  dec_fun.py  dp_funs.py  resnet_fun.py  win_data_fun.py
docker/: Dockerfile  README.md  run_contact_estimator_docker.bash
docker/cuda10_1/: Dockerfile  README.md
docker/cuda11_1/: Dockerfile  README.md  run_contact_estimator_docker.bash
engines/: README.md
include/communication/: lcm_data_types.hpp  lcm_handler.hpp  lcm_msg_queue.hpp
include/src/: contact_estimation.hpp  lcm_cnn_interface.hpp  lcm_handler.hpp  lcm_msg_queue.hpp
include/utils/: tensorrt_acc.hpp
lcm_types/: CMakeLists.txt  contact_est_lcmt.lcm  contact_ground_truth_t.lcm  contact_t.lcm  leg_control_data_lcmt.lcm  synced_proprioceptive_lcmt.lcm
lcm_types/cpp/: contact_est_lcmt.hpp  contact_ground_truth_t.hpp  contact_t.hpp  leg_control_data_lcmt.hpp  microstrain_lcmt.hpp  synced_proprioceptive_lcmt.hpp
lcm_types/python/: __init__.py  cnn_input_matrix_lcmt.py  contact_ground_truth_t.py  contact_t.py  leg_control_data_lcmt.py  microstrain_lcmt.py  synced_proprioceptive_lcmt.py
machine_learning_methods/source/: both_legs.py  kmeans_legs.py  single_leg.py
machine_learning_methods/utils/: Jp_VectorNav_to_LeftToeBottom.py  Jp_VectorNav_to_RightToeBottom.py  estimate_contact.py  ml_funs.py
results/: 0305_30epoch_loss_history.npy  0305_30epoch_lr1e-4_loss_history.npy  0305_initial_train_loss_history.npy
src/: CMakeLists.txt  contact_cnn.py  contact_estimation.cpp  inference_one_seq.py  lcm_cnn_interface.cpp  lcm_cnn_interface.hpp  loss.py  main.cpp  main.py  mtl_models.py  pass_to_cnn.py  run_contact_estimator.cpp  test.py  test_multi.py  train.py  train_multi.py
src/communication/: lcm_handler.cpp
utils/: .CMakeLists.txt.swp  .mat2numpy.py.swo  .mat2numpy.py.swp  .serialize_engine.cpp.swp  CMakeLists.txt  CNN_INPUT.py  Makefile  Sync_ros_with_lcm.m  Sync_ros_with_lcm.m~  Visualize_results.m  calculate_acc.m  compare.csv  compare_air_ground.m  controller.py  data_handler.py  data_handler_np.py  df_mcst.csv  df_msg_in.csv  dp_funs.py  lcm-cnn-interface  lcm_cnn_interface.cpp  lcm_cnn_interface.hpp  lcm_cnn_interface.py  lcm_original.py  leg.csv  load_np_save_mat.py  mat2numpy.py  onnx_to_tensorrt.py  onnx_to_trt.cpp  plot_loss.py  plot_training_loss.m  plot_video.asv  plot_video.m  read-log.py  send-message.py  serialize_engine.cpp  single_leg_fun.py  tensorrt_acc.cpp  torch_to_onnx.py
weights/: README.md
